Alignment fixes

--- a/app/_scss/components/_syntax.scss
+++ b/app/_scss/components/_syntax.scss
@@ -24,7 +24,6 @@
 
   .nf { /* Name.Function */
     color: $base16-04;
-    font-weight: none;
   }
 
   .nt {  /* Name.Tag */
